kong-ingress-vllm-embedding.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vllm-embedding-ingress
  namespace: kai-test
  annotations:
    konghq.com/plugins: key-auth-vllm, ai-proxy-vllm-embedding, ai-proxy-logger
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - llm.test.drai.auckland.ac.nz
    secretName: vllm-gptoss-tls-cert 
  rules:
  - host: llm.test.drai.auckland.ac.nz
    http:
      paths:
      - path: /embedding
        pathType: Prefix
        backend:
          service:
            name: vllm-embedding-service
            port:
              number: 8000
