kong-ingress-vllm-gptoss-chat-completions.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vllm-gptoss-ingress
  namespace: kai-test
  annotations:
    cert-manager.io/cluster-issuer: "zerossl-kong-issuer"
    konghq.com/plugins: key-auth-vllm, ai-proxy-vllm-gptoss
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - llm.test.drai.auckland.ac.nz
    secretName: vllm-gptoss-tls-cert 
  rules:
  - host: llm.test.drai.auckland.ac.nz
    http:
      paths:
      - path: /v1/chat/completions
        pathType: Prefix
        backend:
          service:
            name: vllm-gptoss-service
            port:
              number: 8000
