portal.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-portal
  namespace: kai-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-portal
  template:
    metadata:
      labels:
        app: api-portal
    spec:
      serviceAccountName: api-portal-sa
      containers:
      - name: api-portal
        image: cdjs/kong-portal:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: api-portal
  namespace: kai-test
spec:
  selector:
    app: api-portal
  ports:
  - port: 80
    targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-portal-ingress
  namespace: kai-test
  annotations:
    cert-manager.io/cluster-issuer: zerossl-kong-issuer
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - portal.test.drai.auckland.ac.nz
      secretName: portal-test-tls
  rules:
    - host: portal.test.drai.auckland.ac.nz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-portal
                port:
                  number: 80
